feat(desktop): impl discovery gui

--- a/plan.org
+++ b/plan.org
@@ -1,6 +1,6 @@
 #+TITLE: Plan
 
-* Plan [0/4]
+* Plan [0/5]
 ** TODO 发现界面 [0/6]
 
 *** TODO 发现收藏
@@ -27,7 +27,7 @@
 
 *** TODO 本地历史
 
-** TODO 网络 [/]
+** TODO 网络 [0/2]
 
 *** TODO 网络下载
 
@@ -35,6 +35,8 @@
 
 *** TODO 多设备同步收藏
 
+
+** TODO I18N
 
 ** TODO 歌曲源 [1/4]
 
